--- a/about/index.html
+++ b/about/index.html
@@ -16,10 +16,10 @@
             box-sizing: border-box;
         }
 
-        body {
-            font-family: Arial, sans-serif;
+        html, body {
             margin: 0;
             padding: 0;
+            font-family: Arial, sans-serif;
             color: var(--secondary-color);
             background: var(--white);
             line-height: 1.6;
@@ -27,15 +27,18 @@
             flex-direction: column;
             min-height: 100vh;
         }
+
         .content {
-            margin: 120px auto;
+            margin: 120px auto; /* Adjusted for fixed header */
             max-width: 800px;
             padding: 20px;
             text-align: center;
         }
+
         .section {
             margin-bottom: 40px;
         }
+
         .leader-photo {
             width: 200px;
             height: 200px;
@@ -43,18 +46,22 @@
             border-radius: 50%;
             margin: 20px auto;
         }
+
         h1, h2 {
             color: var(--secondary-color);
             font-size: 2rem;
             margin-bottom: 20px;
         }
+
         h3 {
             font-size: 1.5rem;
             margin-bottom: 10px;
         }
+
         p {
             text-align: center;
         }
+
         .team-members {
             display: flex;
             justify-content: space-around;
@@ -62,6 +69,7 @@
             flex-wrap: wrap;
             gap: 40px;
         }
+
         .team-member {
             width: 200px;
             text-align: center;
