--- a/about/index.html
+++ b/about/index.html
@@ -29,7 +29,7 @@
         }
 
         .content {
-            margin: 120px auto; /* Adjusted for fixed header */
+            margin: 120px auto; /* Adjusted for consistent fixed header */
             max-width: 800px;
             padding: 20px;
             text-align: center;
